# fuchsia-sdk

./: .gitignore  BUILD.gn  README.md  module
dart/pkg/: flutter
dart/pkg/fuchsia_sdk/: pubspec.yaml
dart/pkg/fuchsia_sdk/lib/: paths.dart  project.dart  runprocess.dart  transformer.dart
dart/pkg/fuchsia_sdk/src/commands/: gen.dart
scripts/: common.py  copy-includes.py  fidl-sync.py  generate-dart-packages.py  generate-vars.py
